# ext4-view-rs

./: .deny.toml  .gitignore  .rustfmt.toml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
benchtool/: Cargo.toml
benchtool/src/: main.rs
docs/: code-of-conduct.md  dev.md  releasing.md
examples/: cat.rs
ext4-tool/: Cargo.toml
ext4-tool/src/: main.rs
src/: block_cache.rs  block_group.rs  block_index.rs  block_read.rs  block_size.rs  checksum.rs  decompress.rs  dir.rs  dir_block.rs  dir_entry.rs  dir_entry_hash.rs  dir_htree.rs  error.rs  extent.rs  features.rs  file.rs  file_blocks.rs  file_type.rs  format.rs  inode.rs  iters.rs  journal.rs  label.rs  lib.rs  main.rs  metadata.rs  path.rs  reader.rs  resolve.rs  superblock.rs  test_util.rs  util.rs  uuid.rs  walk.rs
src/iters/: extents.rs  file_blocks.rs  read_dir.rs
src/iters/file_blocks/: block_map.rs  extents_blocks.rs
src/journal/: block_header.rs  block_map.rs  commit_block.rs  descriptor_block.rs  revocation_block.rs  superblock.rs
test_data/: test_disk1.bin.compressed  test_disk1.bin.zst  test_disk_4k_block_journal.bin.zst  test_disk_ext2.bin.zst  test_disk_ext3.bin.zst  test_disk_small_inodes.bin.zst
tests/integration/: dir.rs  ext2.rs  ext3.rs  ext4.rs  file.rs  label.rs  main.rs  path.rs  uuid.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  big_fs.rs  compress.rs  diff_walk.rs  dmsetup.rs  lib.rs  losetup.rs  main.rs  mount.rs  tea.mke2fs.conf  vm_bench.rs
xtask/src/bench/: walk.rs
xtask/uefibench/: Cargo.toml
xtask/uefibench/src/: main.rs
