# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
default-run = "xtask"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.0", default-features = false, features = ["derive", "help", "std"] }
ext4-view = { path = "../", features = ["std"] }
gpt_disk_io = { version = "0.16.0", features = ["std"] }
libc = "0.2.155"
lzma-rs = "0.3.0"
nix = { version = "0.31.0", features = ["fs", "user"] }
ovmf-prebuilt = "0.2.2"
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.10.1"
ureq = "3.0.0"
