[package]
name = "uefibench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
autotests = false

[dependencies]
ext4-view = { path = "../.." }
sha2 = { version = "0.10.8", default-features = false }
uefi = { version = "0.36.0", features = ["alloc"] }

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.36.0", features = ["global_allocator", "panic_handler"] }
